# tabToPbi

./: .gitignore  CLAUDE.md  NeedTofix.md  README.md  pbi_mcp.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-16-pbir-validator.md
docs/superpowers/specs/: 2026-04-16-pbir-validator-design.md
input/: Superstore.twb  simple.twb  simple_join.twb  simple_join_calculated_line.twb  tabpbi.twbx
scripts/: verify_pbi_open.py
tab_to_pbi/: generator.py  main.py  parser.py  transformer.py  translator.py  validator.py
tests/: test_e2e.py  test_pbi_desktop.py  test_pbi_e2e_open.py  test_sorting.py  test_t10_filters.py  test_t11_twbx.py  test_t12.py  test_t14.py  test_t9_calculated_fields.py  test_validator.py
